<resources>
    <string name="app_name">CataTube</string>
    <string name="image_show">Image Show</string>
    <string name="title_show">Title Show</string>
    <string name="image_background">Image Background</string>
    <string name="quote">Quote</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="txtSubtitleMovie">%1$s | %2$.0fh %3$.0fm</string>
    <string name="txtSubtitleTelevision">%1$s</string>
    <string name="txtRating">Rating: %1$.0f/100%%</string>
    <string name="detail_box">Detail Box</string>
    <string name="detail_activity">Detail CataTube</string>
    <string name="tv_show">TV Show</string>
    <string name="movie">Movie</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="price">$ %1$s</string>
    <string name="photo">https://image.tmdb.org/t/p/w440_and_h660_face%1$s</string>
    <string name="type">Type</string>
    <string name="seasonEpisodeNumber">%1$d Seasons, %2$d Episodes</string>
    <string name="patternPrice">#,###</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="favorite_activity">Favorite CataTube</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="errorMessage">There is an error. Please check the internet or contact the system administrator</string>
    <string name="addedMovieFavorite">You just added %1$s to your Movie Favorite</string>
    <string name="removeMovieFavorite">You just removed %1$s from your Movie Favorite</string>
    <string name="addedTelevisionFavorite">You just added %1$s to your Television Favorite</string>
    <string name="removeTelevisionFavorite">You just removed %1$s from your Television Favorite</string>
    <string name="there_is_nothing_in_here">There is nothing in here</string>
</resources>